# AcquistoCase

./: .env.example  .gitignore  README.md  start.bat
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: decay.py  dedup.py  normalize.py  objective.py  scoring.py
backend/app/data/: listings_idealista.json  listings_immobiliare.json  omi_sample.csv
backend/app/models/: input.py  listing.py  output.py
backend/app/services/: aggregator.py  ai_openrouter.py  amenities_overpass.py  geocoding_nominatim.py  interfaces.py  listing_sources.py  market_omi.py  orchestrator.py
backend/tests/: conftest.py
backend/tests/fakes/: fake_services.py
backend/tests/integration/: test_aggregator.py  test_api_evaluate.py  test_api_listings.py  test_orchestrator.py
backend/tests/unit/: test_decay.py  test_dedup.py  test_models_validation.py  test_normalize.py  test_scoring_distance.py  test_scoring_final.py  test_scoring_objective.py  test_scoring_price.py  test_scoring_services.py
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DataRisksNotice.tsx  EvaluationForm.tsx  ListingCard.tsx  ListingsExplorer.tsx  ListingsMap.tsx  ResultsPanel.tsx  ScoreGauge.tsx
frontend/lib/: api-client.ts  format.ts  types.ts
frontend/tests/e2e/: happy-path.spec.ts
frontend/tests/unit/: EvaluationForm.test.tsx  ListingCard.test.tsx  ListingsExplorer.test.tsx  format.test.ts  (+2 more)
