[project]
name = "acquistocase-backend"
version = "0.1.0"
description = "AcquistoCase — backend FastAPI per la valutazione di immobili"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    # Impl di rete verso servizi esterni: testate manualmente, fuori dalla soglia
    "app/services/geocoding_nominatim.py",
    "app/services/amenities_overpass.py",
    "app/services/market_omi.py",
    "app/services/ai_openrouter.py",
    "app/api/deps.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
